# molecule-toolkit

./: CMakeLists.txt  Makefile  README.md
docs/: Improvement_on_Molecule_in_C.md
include/: molecule2_reader.h
src/: blockchain-builder.c  builder-example.c  new-api-demo.c  sample-builder.h  sample.c
